--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ntes-server",
+  "name": "notes-server",
   "version": "1.0.0",
   "description": "Notes Web App Server created with Express",
   "author": "Andrew Matsumoto",
@@ -7,9 +7,10 @@
   "main": "index.ts",
   "scripts": {
     "start": "tsc",
-    "test": "jest"
+    "test": "jest --passWithNoTests"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
@@ -23,6 +24,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
