--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "main": "index.ts",
   "scripts": {
-    "start": "tsc",
+    "start": "node .",
     "test": "jest --passWithNoTests"
   },
   "devDependencies": {
@@ -16,6 +16,7 @@
     "@types/jest": "^27.4.0",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^17.0.8",
+    "@types/pg": "^8.6.3",
     "@types/pg-promise": "^5.4.3",
     "@types/sequelize": "^4.28.11",
     "@types/supertest": "^2.0.11",
@@ -28,6 +29,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.1",
+    "pg-hstore": "^2.3.4",
     "pg-promise": "^10.11.1",
     "sequelize": "^6.12.5"
   },
