--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,6 +8,7 @@
         "strict": true,
         "skipLibCheck": true,
         "noFallthroughCasesInSwitch": true,
-        "outDir": "./build"
+        "outDir": "./build",
+        "typeRoots": ["./types"]
     }
 }
