--- a/.github/workflows/client-build-and-test.yml
+++ b/.github/workflows/client-build-and-test.yml
@@ -10,6 +10,10 @@ on:
   pull_request:
     branches: [ main ]
     paths: ['client/**', '.github/workflows/client-build-and-test.yml']
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
